tools/tests/ui/fail/l1088.cnf
// Test file for error code: L1088
// Expected error: Underflow Boundary character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
